force-app/main/default/objects/Indeed_com_JobForm__c/fields/Are_you_a_married_del__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_married_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you a married?</label>
    <type>Checkbox</type>
</CustomField>