force-app/main/default/objects/Indeed_com_JobForm__c/fields/Are_you_a_senior_citizen__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_senior_citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you a senior citizen?</label>
    <type>Checkbox</type>
</CustomField>