force-app/main/default/objects/Indeed_com_JobForm__c/fields/Attributes__c.field-meta.xml
<CustomField>
    <fullName>Attributes__c</fullName>
    <label>Attributes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand_Names__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4 GB RAM</fullName>
            </value>
            <value>
                <fullName>8 GB RAM</fullName>
            </value>
            <value>
                <fullName>Whirlpool Model 123</fullName>
            </value>
            <value>
                <fullName>Whirlpool Model 456</fullName>
            </value>
            <value>
                <fullName>Red Shirt</fullName>
            </value>
            <value>
                <fullName>Black Shirt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>