force-app/main/default/objects/Indeed_com_JobForm__c/fields/Brand_Names__c.field-meta.xml
<CustomField>
    <fullName>Brand_Names__c</fullName>
    <label>Brand Names</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Products_Names__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nokia</fullName>
            </value>
            <value>
                <fullName>OnePlus</fullName>
            </value>
            <value>
                <fullName>Whirlpool</fullName>
            </value>
            <value>
                <fullName>Peter England</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>