force-app/main/default/objects/Indeed_com_JobForm__c/fields/Category_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Products__c</fullName>
    <label>Category of Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Communication Devices</fullName>
            </value>
            <value>
                <fullName>Home Appliances</fullName>
            </value>
            <value>
                <fullName>Apparels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>