force-app/main/default/objects/Indeed_com_JobForm__c/fields/Documents_allowed_to_submit__c.field-meta.xml
<CustomField>
    <fullName>Documents_allowed_to_submit__c</fullName>
    <label>Documents allowed to submit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>Age Certificate</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>