force-app/main/default/objects/Indeed_com_JobForm__c/fields/Documents_Needed__c.field-meta.xml
<CustomField>
    <fullName>Documents_Needed__c</fullName>
    <label>Documents Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank passbook</fullName>
            </value>
            <value>
                <fullName>Marriage certificate</fullName>
            </value>
            <value>
                <fullName>Driving license</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>