force-app/main/default/objects/Indeed_com_JobForm__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <defaultValue>&quot;John&quot;</defaultValue>
    <inlineHelpText>Enter First name using alphabetic only</inlineHelpText>
    <label>First Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>