force-app/main/default/objects/Indeed_com_JobForm__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <label>Job Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>