force-app/main/default/objects/Indeed_com_JobForm__c/fields/Languages_Know__c.field-meta.xml
<CustomField>
    <fullName>Languages_Know__c</fullName>
    <label>Languages Known</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>JAVA</fullName>
            </value>
            <value>
                <fullName>Dotnet</fullName>
            </value>
            <value>
                <fullName>Saleforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>