force-app/main/default/objects/Indeed_com_JobForm__c/fields/Preferred_Country__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Country__c</fullName>
    <label>Preferred Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Global</valueSetName>
    </valueSet>
</CustomField>