force-app/main/default/objects/Indeed_com_JobForm__c/fields/Products_Names__c.field-meta.xml
<CustomField>
    <fullName>Products_Names__c</fullName>
    <label>Products Names</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category_of_Products__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Washing Machine</fullName>
            </value>
            <value>
                <fullName>Formal Shirts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>