force-app/main/default/objects/Indeed_com_JobForm__c/validationRules/FirstNamecheck.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstNamecheck</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(First_Name__c ,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>check</errorMessage>
</ValidationRule>