force-app/main/default/objects/Indeed_com_JobForm__c/validationRules/Indeed_Salary_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Indeed_Salary_VR</fullName>
    <active>false</active>
    <description>Indeed_Salary_VR</description>
    <errorConditionFormula>Salary_Expected__c &gt; 1000</errorConditionFormula>
    <errorDisplayField>Salary_Expected__c</errorDisplayField>
    <errorMessage>Salary is High</errorMessage>
</ValidationRule>