force-app/main/default/objects/Indeed_com_JobForm__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Experience__c</columns>
    <columns>Preferred_Country__c</columns>
    <columns>Salary_Expected__c</columns>
    <columns>Languages_Know__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>